--- a/data-collection/package.json
+++ b/data-collection/package.json
@@ -2,7 +2,6 @@
   "name": "mal-data",
   "version": "1.0.0",
   "scripts": {
-    "test": "npx jest",
     "build": "tsc *.ts",
     "dev": "tsc-watch *.ts",
     "shows": "node shows.js",
@@ -14,10 +13,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/jest": "^27.0.3",
     "@types/node": "^16.11.11",
-    "jest": "^27.4.3",
-    "ts-jest": "^27.1.0",
     "tsc-watch": "^4.5.0",
     "typescript": "^4.5.2"
   },
@@ -27,12 +23,6 @@
     "cross-fetch": "^3.1.4",
     "d3-force": "2.1.1",
     "d3-force-reuse": "^1.0.1",
-    "git": "^0.1.5",
-    "lodash": "^4.17.21",
-    "mal-scraper": "github:platers/MalScraper#typings",
-    "ml-matrix": "^6.8.2",
-    "node-fetch": "^3.1.0",
-    "nodeplotlib": "^0.7.7",
-    "spectral-clustering-js": "github:platers/spectral-clustering-js"
+    "lodash": "^4.17.21"
   }
 }
