--- a/svelte/package.json
+++ b/svelte/package.json
@@ -2,13 +2,7 @@
 	"private": true,
 	"scripts": {
 		"build": "cross-env NODE_ENV=production webpack",
-		"dev": "webpack serve",
-		"start": "serve public --listen 8080",
-		"validate": "svelte-check",
-		"d3-force": "^3.0.0",
-		"lodash-es": "^4.17.21",
-		"pixi-viewport": "^4.34.3",
-		"pixi.js": "^6.2.0"
+		"dev": "webpack serve"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.12.17",
