--- a/data-collection/package.json
+++ b/data-collection/package.json
@@ -4,8 +4,8 @@
   "scripts": {
     "build": "tsc *.ts",
     "dev": "tsc-watch *.ts",
-    "main": "node main.js",
-    "all": "npm run build && npm run main"
+    "all": "npm run build && node main.js",
+    "cached": "npm run build && node main.js cached"
   },
   "author": "",
   "license": "ISC",
