--- a/data-collection/package.json
+++ b/data-collection/package.json
@@ -20,6 +20,7 @@
     "cross-fetch": "^3.1.4",
     "d3-force": "2.1.1",
     "d3-force-reuse": "^1.0.1",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "multilevel-clustering": "github:platers/multilevel-clustering"
   }
 }
