--- a/svelte/tsconfig.json
+++ b/svelte/tsconfig.json
@@ -1,5 +1,5 @@
 {
-	"include": ["src/**/*", "../data-collection/types.ts", "webpack.config.ts"],
+	"include": ["src/**/*", "webpack.config.ts"],
 	// "exclude": ["node_modules/*", "__sapper__/*", "public/*"],
 	"compilerOptions": {
 		"moduleResolution": "node",
