--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,14 @@ jobs:
         working-directory: ./svelte
 
     steps:
+      - name: Install Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.9"
+          cache: "pip" # caching pip dependencies
+        run: pip install -r requirements.txt
+        working-directory: ./data-collection
+
       - name: Checkout
         uses: actions/checkout@v2
         with:
