--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,13 @@
-anime-offline-database.json
 node_modules
 .DS_Store
 
 *.js
 
-min_metadata.json
-edges.json
-edges.txt
-partitions.txt
-clusters.json
-layout.json
+#min_metadata.json
+#edges.json
+#edges.txt
+#partitions.txt
+#clusters.json
+#layout.json
 
 build/
